@임채규 add 스코어 수정 코드 작성 중 -2