@@ -47,22 +47,22 @@ public class CampManagementApplication {
 
     // 초기 데이터 생성
     private static void setInitData() {
-        //studentStore = new ArrayList<>();
+        studentStore = new ArrayList<>();
         //조회를 위해 학생리스트를 임의로 생성
-        studentStore = List.of(
-            new Student(
-                sequence(INDEX_TYPE_STUDENT),
-                "HongGilDong"
-            ),
-            new Student(
-                sequence(INDEX_TYPE_STUDENT),
-                "YuHari"
-            ),
-            new Student(
-                sequence(INDEX_TYPE_STUDENT),
-                "HongGilDong"
-            )
-        );
+//        studentStore = List.of(
+//            new Student(
+//                sequence(INDEX_TYPE_STUDENT),
+//                "HongGilDong"
+//            ),
+//            new Student(
+//                sequence(INDEX_TYPE_STUDENT),
+//                "YuHari"
+//            ),
+//            new Student(
+//                sequence(INDEX_TYPE_STUDENT),
+//                "HongGilDong"
+//            )
+//        );
         subjectStore = List.of(
             new Subject(
                 sequence(INDEX_TYPE_SUBJECT),
@@ -335,23 +335,21 @@ public class CampManagementApplication {
     }
 
     // 수강생의 과목별 회차 점수 수정
+    //1. 해당학생 조회하고 없는 번호면 오류 텍스트 출력하기
+    //2. 해당학생의 수정할 과목 입력하고 조회 후 없으면 오류 텍스트 출력하기
+    //3. 수정할 회차 입력하고 조회 후 없으면 오류 텍스트 출력하기
+    //4. 점수 수정하는 기능 구현  점수가 없으면 바로 추가해주는것도 넣기
     private static void updateRoundScoreBySubject()  {
         String studentId = getStudentId(); // 관리할 수강생 고유 번호
         System.out.println("점수 수정을 원하는 학생의 id를 입력하세요.");
         studentId = String.valueOf(sc.nextInt()); //id 입력
-        //1. 해당학생 조회하고 없는 번호면 오류 텍스트 출력하기
-        //2. 해당학생의 수정할 과목 입력하고 조회 후 없으면 오류 텍스트 출력하기
-        //3. 수정할 회차 입력하고 조회 후 없으면 오류 텍스트 출력하기
-        //4. 점수 수정하는 기능 구현  점수가 없으면 바로 추가해주는것도 넣기
+
         for(Student s: studentStore) { //studentStore 배열의 id 와 입력할 아이디가 같은지 대조
             if (s.getStudentId().equals(studentId)) {
-               Student student = s; // 맞으면 진행
+               Student student = s; // 맞으면 반복문 넘어가서 진행
                 break;
+            }else {System.out.println("해당 학생을 찾을 수 없습니다."); //id 값이 배열에 없으면 오류문 나타냄
             }
-        }
-        if(studentId == null){
-            System.out.println("해당 학생을 찾을 수 없습니다."); //id 값이 배열에 없으면 오류문 나타냄
-            return;
         }
 
         System.out.println("수정할 과목 이름을 입력하세요.");
@@ -359,23 +357,31 @@ public class CampManagementApplication {
 
         for(Subject s : subjectStore){
             if (s.getSubjectName().equals(subjectName)) { //적은 과목과 불러온 과목 이름 같은지 대조
-               Subject subject = s;
+               Subject subject = s;//맞으면 반복문 종료 후 다음 진행
                break;
+            }else{
+                System.out.println("해당 과목을 찾을 수 없습니다."); //id 값이 배열에 없으면 오류문 나타냄
             }
-        }
-        if(subjectName == null){
-            System.out.println("해당 과목을 찾을 수 없습니다."); //id 값이 배열에 없으면 오류문 나타냄
-            return;
         }
         System.out.println("수정할 회차를 입력해 주세요 "); //회차입력 - 범위벗어나는 숫자입력시 오류문자 내는 기능 넣기
         int round = sc.nextInt();
 
+        if (round < 1 || round > 10) {
+            System.out.println("유효하지 않은 회차입니다. 1부터 10 사이의 값을 입력해주세요.");
+        }
+
         System.out.println("새로운 점수를 입력해 주세요 "); // 점수입력 - 범위벗어나는 숫자 입력시 오류 문자 내는 기능 넣기
         int updatedScore = sc.nextInt();
 
-        for(Score score : scoreStore){
-             // 조건해서 맞으면 해당 위치에 점수 넣기
-        }
+            if (studentId.equals(studentId) && subjectName.equals(subjectName)) {
+                scoreStore.add(updatedScore); //조건이 맞으면 입력된 점수 스코어에 넣기
+            }
+            if(scoreStore == null){
+                // 점수 없을때 점수 저장
+                //입력된 업데이트 스코어를 스코어 저장소에 저장
+                scoreStore.add(score(updatedScore));
+            }
+
         //점수 없으면 그냥 그대로 점수 추가하기 기능 넣기
         System.out.println("시험 점수를 수정합니다...");
         System.out.println("\n점수 수정 성공!");
@@ -438,7 +444,7 @@ public class CampManagementApplication {
             return sc.next();
         }
         //이름이 같은 사람이 없다면 해당 수강생의 아이디 출력
-        else if(selectStudent.size()==1) return selectStudent.getFirst().getStudentId();
+        else if(selectStudent.size()==1) return selectStudent.get(0).getStudentId();
         //해당 이름을 가진 수강생이 없다면 NoName 출력
         else return "NoName";
     }
